--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,16 +1,14 @@
 pipeline {
     agent any
-    parameters {
-        string( defaultValue: 'hello-world', description: "Project Name", name: 'PROJECT_NAME')
-        string( defaultValue: 'us-west-2', description: "Deployment Region", name: 'DEPLOYMENT_REGION')
-       // string( description: "git feature name", name: "GIT_FEATURE_BRANCH")
-    }
     stages {
         
         stage ('build') {
             steps {
-                sh "sudo docker build -t humancloudak/k8-poc:$BRANCH_NAME ."
-                sh "sudo docker push humancloudak/k8-poc:$BRANCH_NAME"
+                sh '''
+                git clone git@github.com:mohil194250/orangebit-demo2.git
+                cd ornagebit-demo2/
+                sudo docker build -t humancloudak/k8-poc:$BRANCH_NAME .
+                sudo docker push humancloudak/k8-poc:$BRANCH_NAME'''
             }
         }
         stage ('Deploy') {
