--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,8 @@ pipeline {
             steps {
                 sh '''
                 
-                sudo docker build -t humancloudak/k8-poc:$BRANCH_NAME .
+                sudo docker build -t humancloudak/k8-poc .
+                sudo docker tag humancloudak/k8-poc humancloudak/k8-poc:$BRANCH_NAME
                 sudo docker push humancloudak/k8-poc:$BRANCH_NAME'''
             }
         }
