--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,15 +7,15 @@ pipeline {
                 sh '''
                 
                 sudo docker build -t humancloudak/k8-poc .
-                sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:$BRANCH_NAME
-                sudo docker push humancloudak/k8-poc:$BRANCH_NAME'''
+                sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:$BUILD_ID
+                sudo docker push humancloudak/k8-poc:$BUILD_ID'''
             }
         }
         stage ('Deploy') {
             steps {
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
-                sh "kubectl create namespace $BRANCH_NAME"
-                sh "helm upgrade --install $BRANCH_NAME --set image.repository=humancloudak/k8-poc --set image.tag=$BRANCH_NAME --set image.pullPolicy=Always bitnami/apache -n $BRANCH_NAME"
+                sh "kubectl create namespace $BUILD_IDE"
+                sh "helm upgrade --install $BUILD_ID --set image.repository=humancloudak/k8-poc --set image.tag=$BUILD_ID --set image.pullPolicy=Always bitnami/apache -n $BUILD_IDE"
             }
         }
         
