--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         stage ('Deploy') {
             steps {
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
-                sh "kubectl create namespace $BUILD_IDE"
+                sh "kubectl create namespace $BUILD_ID"
                 sh "helm upgrade --install $BUILD_ID --set image.repository=humancloudak/k8-poc --set image.tag=$BUILD_ID --set image.pullPolicy=Always bitnami/apache -n $BUILD_ID"
             }
         }
