--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,7 +7,6 @@ pipeline {
         stage ('build') {
             steps {
                 sh '''
-                BRANCH = $($GIT_BRANCH | cut -d "/" -f2)
                 sudo docker build -t humancloudak/k8-poc .
                 sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:${params.BRANCH}
                 sudo docker push humancloudak/k8-poc:${params.BRANCH}'''
@@ -15,6 +14,7 @@ pipeline {
         }
         stage ('Deploy') {
             steps {
+                git branch: "${params.BRANCH}", url: 'git@github.com:mohil194250/orangebit-demo2.git/'
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
                 sh "kubectl create namespace ${params.BRANCH}"
                 sh "helm upgrade --install ${params.BRANCH} --set image.repository=humancloudak/k8-poc --set image.tag=${params.BRANCH} --set image.pullPolicy=Always bitnami/apache -n ${params.BRANCH}"
