--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,12 +6,9 @@ pipeline {
     stages {
         stage ('build') {
             steps {
-                
-                
-          
                 sh "sudo docker build -t humancloudak/k8-poc ."
-                sh "sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:${params.BRANCH}.${BUILD_ID}"
-                sh "sudo docker push humancloudak/k8-poc:${params.BRANCH}.${BUILD_ID}"
+                sh "sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:${params.BRANCH}"
+                sh "sudo docker push humancloudak/k8-poc:${params.BRANCH}"
                 
             }
         }
@@ -20,7 +17,7 @@ pipeline {
                 
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
                 sh "kubectl create namespace ${params.BRANCH}"
-                sh "helm upgrade --install oragebitdemo-${params.BRANCH} oragne-bit-demo/ --set image.repository=humancloudak/k8-poc --set image.tag=${params.BRANCH}.${BUILD_ID} -n ${params.BRANCH}"
+                sh "helm upgrade --install oragebitdemo-${params.BRANCH} oragne-bit-demo/ --set image.repository=humancloudak/k8-poc --set image.tag=${params.BRANCH} -n ${params.BRANCH}"
                  
             }
         }
@@ -28,17 +25,3 @@ pipeline {
     }
     
 }
-
-
-        // // stage ('deploy') {
-        //     if (env.branch_name == 'dev') {
-        //         sh "helm upgrade --install eks-test-dev --set image.repository=humancloudak/k8-poc --set image.tag=latest --set image.pullPolicy=Always bitnami/tomcat -n dev"
-        //     }
-        //     elif (env.branch_name == 'uat') {
-        //         sh "helm upgrade --install eks-test-uat --set image.repository=humancloudak/k8-poc --set image.tag=latest --set image.pullPolicy=Always bitnami/tomcat -n uat"
-        //     }
-        //     elif (env.branch_name == "prod") {
-        //         sh "helm upgrade --install eks-test-prod --set image.repository=humancloudak/k8-poc --set image.tag=latest --set image.pullPolicy=Always bitnami/tomcat -n prod"
-        //     }
-        // }
-        // Hello Hello
