--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,24 +1,25 @@
 pipeline {
     agent any
     parameters {
-         gitParameter branchFilter: 'origin/feature/(.*)', defaultValue: '', name: 'BRANCH', type: 'PT_BRANCH'
+         gitParameter branchFilter: 'origin/(.*)', defaultValue: '', name: 'BRANCH', type: 'PT_BRANCH'
     }
     stages {
         stage ('build') {
             steps {
-                sh "sudo docker build -t humancloudak/k8-poc ."
-                sh "sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:${BRANCH}"
-                sh "sudo docker push humancloudak/k8-poc:${BRANCH}"
-                
+                sh '''
+                git branch: "${params.BRANCH}", url: 'git@github.com:mohil194250/orangebit-demo2.git/'
+                echo "${params.BRANCH}"
+                sudo docker build -t humancloudak/k8-poc .
+                sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:${params.BRANCH}
+                sudo docker push humancloudak/k8-poc:${params.BRANCH}'''
             }
         }
         stage ('Deploy') {
             steps {
                 
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
-                sh "kubectl create namespace ${BRANCH}"
-                sh "helm upgrade --install oragebitdemo-${BRANCH} oragne-bit-demo/ --set image.repository=humancloudak/k8-poc --set image.tag=${BRANCH} -n ${BRANCH}"
-                 
+                sh "kubectl create namespace ${params.BRANCH}"
+                sh "helm upgrade --install ${params.BRANCH} --set image.repository=humancloudak/k8-poc --set image.tag=${params.BRANCH} --set image.pullPolicy=Always bitnami/apache -n ${params.BRANCH}"
             }
         }
         
