--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,12 +6,11 @@ pipeline {
     stages {
         stage ('build') {
             steps {
-                sh '''
-                git branch: "${params.BRANCH}", url: 'git@github.com:mohil194250/orangebit-demo2.git/'
-                echo "${params.BRANCH}"
-                sudo docker build -t humancloudak/k8-poc .
-                sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:${params.BRANCH}
-                sudo docker push humancloudak/k8-poc:${params.BRANCH}'''
+                sh "git branch: "${params.BRANCH}", url: 'git@github.com:mohil194250/orangebit-demo2.git/'"
+                sh "echo "${params.BRANCH}""
+                sh "sudo docker build -t humancloudak/k8-poc ."
+                sh "sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:${params.BRANCH}"
+                sh "sudo docker push humancloudak/k8-poc:${params.BRANCH}"
             }
         }
         stage ('Deploy') {
@@ -19,7 +18,7 @@ pipeline {
                 
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
                 sh "kubectl create namespace ${params.BRANCH}"
-                sh "helm upgrade --install ${params.BRANCH} --set image.repository=humancloudak/k8-poc --set image.tag=${params.BRANCH} --set image.pullPolicy=Always bitnami/apache -n ${params.BRANCH}"
+                sh "helm upgrade --install oragebitdemo-${params.BRANCH} oragne-bit-demo/ --set image.repository=humancloudak/k8-poc --set image.tag=${params.BRANCH}.${BUILD_ID} -n ${params.BRANCH}"
             }
         }
         
