--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -19,7 +19,13 @@ pipeline {
             steps {
                 
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
-                sh "kubectl create namespace ${params.BRANCH}"
+                sh "namespace=$(kubectl get ns ${params.BRANCH} -o json | jq .status.phase -r)"
+                if ( $namespace == "Active" ) {
+                        echo "Namespace exists"
+                } else {
+                      sh "kubectl create namespace ${params.BRANCH}"
+                }
+                
                 sh "helm upgrade --install oragebitdemo-${params.BRANCH} oragne-bit-demo/ --set image.repository=humancloudak/k8-poc --set image.tag=${params.BRANCH}.${BUILD_ID} -n ${params.BRANCH}"
                  
             }
