--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,13 +2,11 @@ pipeline {
     agent any
     parameters {
          gitParameter branchFilter: 'origin/feature/(.*)', defaultValue: '', name: 'BRANCH', type: 'PT_BRANCH'
+         namespace = $(kubectl get ns ${params.BRANCH} -o json | jq .status.phase -r)
     }
     stages {
         stage ('build') {
             steps {
-                
-                
-          
                 sh "sudo docker build -t humancloudak/k8-poc ."
                 sh "sudo docker tag humancloudak/k8-poc:latest humancloudak/k8-poc:${params.BRANCH}.${BUILD_ID}"
                 sh "sudo docker push humancloudak/k8-poc:${params.BRANCH}.${BUILD_ID}"
@@ -19,7 +17,7 @@ pipeline {
             steps {
                 
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
-                sh "namespace=$(kubectl get ns ${params.BRANCH} -o json | jq .status.phase -r)"
+               // sh "namespace=$(kubectl get ns ${params.BRANCH} -o json | jq .status.phase -r)"
                 if ( $namespace == "Active" ) {
                         echo "Namespace exists"
                 } else {
