--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,6 @@ pipeline {
     agent any
     parameters {
          gitParameter branchFilter: 'origin/feature/(.*)', defaultValue: '', name: 'BRANCH', type: 'PT_BRANCH'
-         //namespace = $(kubectl get ns ${params.BRANCH} -o json | jq .status.phase -r)
     }
     stages {
         stage ('build') {
@@ -17,13 +16,7 @@ pipeline {
             steps {
                 
                 sh "aws eks update-kubeconfig --region us-west-2 --name eks-test-cluster"
-                namespace = $(kubectl get ns ${params.BRANCH} -o json | jq .status.phase -r) 
-                if ( $namespace == "Active" ) {
-                        echo "Namespace exists"
-                } else {
-                      sh "kubectl create namespace ${params.BRANCH}"
-                }
-                
+                sh "chmod +x namespacecheck.sh; bash -x namespacecheck.sh ${params.BRANCH}"             
                 sh "helm upgrade --install oragebitdemo-${params.BRANCH} oragne-bit-demo/ --set image.repository=humancloudak/k8-poc --set image.tag=${params.BRANCH}.${BUILD_ID} -n ${params.BRANCH}"
                  
             }
