--- a/ingress.yaml
+++ b/ingress.yaml
@@ -13,7 +13,7 @@ spec:
             - pathType: Prefix
               backend:
                 service:
-                  name: oragebitdemo-mohil-oragne-bit-demo
+                  name: oragebitdemo-NAMESPACE-oragne-bit-demo
                   port:
                     number: 80
-              path: /demo2/main
+              path: /demo2/NAMESPACE
