--- a/ingress.yaml
+++ b/ingress.yaml
@@ -7,15 +7,15 @@ metadata:
 spec:
     ingressClassName: nginx
     rules:
-      - host: a7d50ea86c41f4602906315da2d24a75-1308239132.us-west-2.elb.amazonaws.com
+      - host: aman.orangebitsindia.com
         http:
           paths:
             - pathType: Prefix
               backend:
                 service:
-                  name: oragebitdemo-NAMESPACE-oragne-bit-demo
+                  name: oragebitdemo2-NAMESPACE-oragne-bit-demo
                   port:
                     number: 80
-              path: /demo2/NAMESPACE
+              path: /demo2
               
               
